# website

./: .gitignore  CHANGELOG.md  Caddyfile  README.md  TODO.md  db.old.sqlite3  default.nix  manage.py  pyproject.toml
blog/: admin.py  converters.py  forms.py  models.py  urls.py  views.py  widgets.py
blog/migrations/: 0001_initial.py  0002_article_title.py  0003_article_slug_alter_article_id.py  0004_article_draft_alter_article_title.py  0005_alter_article_created_alter_article_modifed.py  0006_article_description.py  0007_article_seo_alter_article_tags.py  0008_remove_article_seo.py  0009_article_is_homepage.py  0010_article_no_container.py  0011_alter_article_options_comment.py  0012_comment_active.py  0013_rename_draft_article_is_draft_and_more.py  0014_article_head_article_script.py  0015_alter_comment_options_remove_article_is_homepage_and_more.py  0016_article_is_indexed_alter_article_content_and_more.py  0017_article_extra_seo.py  0018_article_override_seo.py  0019_article_content_type_alter_article_content.py  0020_article_comments_enabled_alter_article_content_type.py  0021_alter_article_comments_enabled.py  0022_upload_alter_article_comments_enabled_and_more.py  0023_upload_ident_alter_upload_path.py
blog/render/: __init__.py
kazani/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
kazani/migrations/: 0001_initial.py  0002_rename_description_user_about_me_user_extra_seo_and_more.py  0003_remove_user_extra_seo_alter_user_about_me.py  0004_alter_user_about_me.py
static_root/: robots.txt
templates/: profile.html  root.html
(+24 files in other folders)
